[tool.poetry]
name = "nonebot-plugin-mystool"
version = "v2.0.0"
description = "QQ聊天、频道机器人插件 | 米游社工具-每日米游币任务、游戏签到、商品兑换、免抓包登录、原神崩铁便笺提醒"
license = "MIT"
authors = [
  "Ljzd-PRO <ljzd@office.ljzd-pro.asia>",
  "Everything0519 <598139245@qq.com>"
]
readme = "README.md"
homepage = "https://github.com/Ljzd-PRO/nonebot-plugin-mystool"
repository = "https://github.com/Ljzd-PRO/nonebot-plugin-mystool"
documentation = "https://github.com/Ljzd-PRO/nonebot-plugin-mystool/wiki"
keywords = ["bot", "qq", "qqbot", "onebotv11", "onebot", "nonebot2", "nonebot", "mihoyo", "mihoyobbs", "qq-guild", "star-rail", "genshin-impact"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable"
]
packages = [
    { include = "nonebot_plugin_mystool", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
httpx = ">=0.24.1,<0.27.0"
nonebot_plugin_apscheduler = ">=0.2.0"
ntplib = "^0.4.0"
Pillow = ">=9.5,<11.0"
requests = "^2.31.0"
nonebot-adapter-onebot = "^2.3.1"
nonebot-adapter-qq = "^1.1.2"
tenacity = "^8.2.3"
qrcode = "^7.4.2"
pydantic = "^1.10.0"
nonebot2 = ">=2.0.0"
pytz = "^2023.3.post1"

[tool.poetry.group.test.dependencies]
nonebot2 = { version = "^2.0.1", extras = ["fastapi", "httpx", "websockets"] }
nonebug = "^0.3.4"
pytest = "^7.4.0"
pytest-html = ">=3.2,<5.0"
pytest-asyncio = ">=0.21,<0.24"
flake8 = "^6.1.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Ljzd-PRO/nonebot-plugin-mystool/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
